JDK-8385601 [lworld] Update testing documentation for ValueClassPlugin jtreg option